NYCCHKBK-3705 - spacing issues
Former-commit-id: 4967b6941e9bd862b185454031a843be7794f283 [formerly 4967b6941e9bd862b185454031a843be7794f283 [formerly 4967b6941e9bd862b185454031a843be7794f283 [formerly c43a1b1966c11c0fb752725706349355da06d19e]]]
Former-commit-id: 07c40b18cb6214f1cac11e3fc91448e4f3f9609a
Former-commit-id: f4390ce04bc5c0e60ef7872ff9153910da3ae757
Former-commit-id: 7bb24ef410f2f6e84cbfccbe8c8a935594ec094a

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -1374,6 +1374,10 @@ table.dataTable th.sorting_asc span {
 .dataTable td.text-left-padding div{
     margin: 13px 0px 13px 20px;
 }
+th.pad-left div,
+td.pad-left div{
+    margin-left: 20px !important;
+}
 
 /* Begin - Overriding data table css for 634.json,653.json */
 .dataTable th.text-left,
